plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'DGU_AI_LAB'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// spring
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	//spring security
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// Actuator
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	// mysql
	implementation 'mysql:mysql-connector-java:8.0.32'

	//redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	//spring-doc(swagger)
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.0'

	//jwt
	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
	implementation group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
	implementation group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'

	// smtp
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// kubernetes
	implementation 'io.fabric8:kubernetes-client:6.10.0'

}

tasks.named('test') {
	useJUnitPlatform()
}
